--- a/App/Application/GymTracker/Views/Login.xaml
+++ b/App/Application/GymTracker/Views/Login.xaml
@@ -17,7 +17,9 @@
         <Border BorderBrush="Black" BorderThickness="2" Width="1" Height="300" Grid.Column="0" HorizontalAlignment="Center" Grid.ColumnSpan="2"/>
         
         <!-- Left side-->
-        <Label/>
+        <Label Content="Zach's" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="35" Margin="0,50,150,0"/>
+        <Label Content="Gym" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="75" Margin="0,0,0,100"/>
+        <Label Content="Tracker" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="75" Margin="0,100,0,0"/>
 
         <!-- Right Side frame-->
         <Frame Name="LoginFrame" Grid.Column="1" />
