--- a/App/Application/GymTracker/Views/ResetPassword.xaml
+++ b/App/Application/GymTracker/Views/ResetPassword.xaml
@@ -10,10 +10,10 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="0*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="5*"/>
-            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
@@ -25,8 +25,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             
-            <Button Name="FrameButton" Content="Frame" Background="White" Width="130" Height="40"/>
-            <Button Name="CancelButton" Content="Cancel" Background="White" Grid.Column="1" Width="130" Height="40"></Button>
+            <Button Name="FrameButton" Content="Frame" Background="White" Width="130" Height="40" Click="FrameButton_Click"/>
+            <Button Name="CancelButton" Content="Cancel" Background="White" Grid.Column="1" Width="130" Height="40" Click="CancelButton_Click"></Button>
             
         </Grid>
     </Grid>
