--- a/App/Application/GymTracker/Views/SubViews/ResetSecurityQues.xaml
+++ b/App/Application/GymTracker/Views/SubViews/ResetSecurityQues.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="GymTracker.Views.SubViews.ResetFindAcct"
+﻿<Page x:Class="GymTracker.Views.SubViews.ResetSecurityQues"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:GymTracker.Views.SubViews"
       mc:Ignorable="d" 
       d:DesignHeight="200" d:DesignWidth="350"
-      Title="ResetFindAcct">
+      Title="ResetSecurityQues">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -14,7 +14,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
-        <Label Content="Enter Username:" FontSize="20" FontWeight="UltraLight" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,15,125,0"/>
-        <TextBox Name="FindUNTextbox" Grid.Row="1" Width="250" Height="30" VerticalAlignment="Top" Margin="0,15,0,0" VerticalContentAlignment="Center"/>
+        <Label Name="SecQues" Content="Security Question" FontSize="20" FontWeight="UltraLight" VerticalAlignment="Center" HorizontalAlignment="Center"  Width="340"/>
+        <TextBox Name="AnswerTextBox" Grid.Row="1" Width="250" Height="30" VerticalAlignment="Top" Margin="0,15,0,0"/>        
     </Grid>
 </Page>
