--- a/App/Application/GymTracker/Views/SubViews/ResetSecurityQues.xaml
+++ b/App/Application/GymTracker/Views/SubViews/ResetSecurityQues.xaml
@@ -15,6 +15,6 @@
         </Grid.RowDefinitions>
         
         <Label Name="SecQues" Content="Security Question" FontSize="20" FontWeight="UltraLight" VerticalAlignment="Center" HorizontalAlignment="Center"  Width="340"/>
-        <TextBox Name="AnswerTextBox" Grid.Row="1" Width="250" Height="30" VerticalAlignment="Top" Margin="0,15,0,0"/>        
+        <TextBox Name="AnswerTextBox" Grid.Row="1" Width="250" Height="30" VerticalAlignment="Top" Margin="0,15,0,0" VerticalContentAlignment="Center"/>        
     </Grid>
 </Page>
