--- a/App/Application/GymTracker/Views/SubViews/ResetPasswordSub.xaml
+++ b/App/Application/GymTracker/Views/SubViews/ResetPasswordSub.xaml
@@ -21,7 +21,7 @@
         <Label Content="Enter New Password:" FontSize="15" FontWeight="UltraLight" VerticalAlignment="Center"/>
         <Label Content="Confirm New Password:" FontSize="15" FontWeight="UltraLight" VerticalAlignment="Center" Grid.Row="1"></Label>
         
-        <PasswordBox Grid.Column="1" Width="150" Height="30" VerticalContentAlignment="Center" Name="PasswordBoxLocal"/>
-        <PasswordBox Grid.Row="1" Grid.Column="1"  Width="150"  Height="30" VerticalContentAlignment="Center" Name="PasswordConfBox"/>
+        <PasswordBox Grid.Column="1" Width="150" Height="30" VerticalContentAlignment="Center" Name="PasswordBoxLocal" PasswordChanged="PasswordBoxLocal_OnPasswordChanged"/>
+        <PasswordBox Grid.Row="1" Grid.Column="1"  Width="150"  Height="30" VerticalContentAlignment="Center" Name="PasswordConfBox" PasswordChanged="PasswordConfBox_OnPasswordChanged"/>
     </Grid>
 </Page>
