--- a/Test/WPFTesting/WPFTesting/MainWindow.xaml
+++ b/Test/WPFTesting/WPFTesting/MainWindow.xaml
@@ -5,28 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFTesting"
         mc:Ignorable="d"
-        Title="MainWindow" Height="200" Width="300">
+        Title="MainWindow" Height="300" Width="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="75"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
 
-        <Button Name="Button1" Grid.Row="1" Grid.Column="1" Background="Transparent" BorderBrush="Transparent" Click="Button1_Click" MouseEnter="Button1_MouseEnter" MouseLeave="Button1_MouseLeave">
-            <Button.Content>
-                <Image Name="Button1_Image" Source="/Assets/Button1Passive.png"/>
-            </Button.Content>
-        </Button>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Name="LeftColumn"  Width="150"/>
+                <ColumnDefinition Name="RightColumn" Width="150"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Row="1" Background="Red"/>
+            <Grid Grid.Row="1" Grid.Column="1" Background="Blue"/>
+        </Grid>
         
         
+
+        
+        
+        <Button Height="45" Width="100" Content="Extend Red" Click="RedButton_OnClick" Margin="0,0,150,0"/>
+        <Button Height="45" Width="100" Content="Extend Blue" Click="BlueButton_OnClick" Margin="150,0,0,0"/>
         
     </Grid>
 </Window>
