--- a/App/Application/GymTracker/Views/HomeScreen.xaml
+++ b/App/Application/GymTracker/Views/HomeScreen.xaml
@@ -5,10 +5,31 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GymTracker.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="700"
+      d:DesignHeight="800" d:DesignWidth="1300"
       Title="HomeScreen">
 
-    <Grid Background="White">
+    <Grid Background="Gray">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="160"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <Grid Grid.Row="1" Background="White">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Name="MenuBar" Width="266"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Background="LightGray">
+                
+                <Border Width="4" BorderBrush="DarkGray" BorderThickness="100" HorizontalAlignment="Right"/>
+                
+            </Grid>
+            
+            <Grid Background="White" Grid.Column="1">
+                
+            </Grid>
+        </Grid>
         
     </Grid>
 </Page>
