--- a/App/Application/GymTracker/Views/HomeScreen.xaml
+++ b/App/Application/GymTracker/Views/HomeScreen.xaml
@@ -14,6 +14,13 @@
             <RowDefinition Height="8*"/>
         </Grid.RowDefinitions>
         
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="4*"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        
         <Grid Grid.Row="1" Background="White">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Name="MenuBar" Width="266"/>
